--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p> Use this site to get the weather!</p>
+            <p> Search your location to get the weather!</p>
 
             <form>
                 <input placeholder="Location">
