--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,12 @@
-
 <header>
-    <h1>{{title}}</h1>
+	<div class='header-links'>
+		<a href='/'>Weather</a>
+		<a href='/about'>About</a>
+		<a href='/help'>Help</a>
+	</div>
 
-    <a href="/">Weather</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
+	<div class='header-title'>
+		<h1>{{title}}</h1>
+	</div>
+
 </header>
