--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>This site was created by Justin Smith. It uses data from mapbox.com and weatherstack.com!</p>
+            <p class="about-paragraph">This site was created by Justin Smith. It uses data from mapbox.com and weatherstack.com!</p>
             <img class="portrait" src="/img/justinJumps.jpg">   
         </div>
 
