--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,7 +2,7 @@
 	<div class='header-links'>
 		<a href='/'>Weather</a>
 		<a href='/about'>About</a>
-		<a href='/help'>Help</a>
+		{{! <a href='/help'>Help</a> }}
 	</div>
 
 	<div class='header-title'>
