--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,26 +5,41 @@
     <head>
         <title>Weather</title>
         <link rel="icon" href="img/weather.png">
+        <link rel="video" href="../../public/videos/city-locations-video.webm">
         <link rel="stylesheet" href="/css/styles.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <div class="main-content">
+        <div class="video-wrapper">
             {{>header}}
-            <p> Search your location to get the weather!</p>
+            <div class="main-content">
+                <video playsinline autoplay muted loop poster="cake.jpg">
+                    <source src="/videos/city-locations-video.webm" type="video/webm">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="top-text-container">
+                    <h1>{{title}}</h1>
+                    <p class="info-container">Check the current weather in any location!</p>
+                    <p class="search-address-container"> Search by state/provience, city, town, address or postal/zip code!</p>
+                </div>
+                <div class="bottom-container">
+                    <form>
+                        <input placeholder="Location" >
+                        <button>
+                            Search
+                        </button>
+                    </form>
 
-            <form>
-                <input placeholder="Location">
-                <button>
-                    Search
-                </button>
-            </form>
-
-            <p id="message-1"></p>
-            <p id="message-2"></p>
+                    <p id="message-1"></p>
+                    <p id="message-2"></p>
+                </div>
+            </div>
+            {{>footer}}    
         </div>
-
-        {{>footer}}    
 
         <script src="/js/app.js"></script>
     </body>
